--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MRGSTuckshopApp">
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".verify"></activity>
+        <activity android:name=".Settings" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Register" />
         <activity android:name=".Login" />
