--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MRGSTuckshopApp">
-        <activity android:name=".verify"></activity>
+        <activity android:name=".ContactPage"></activity>
+        <activity android:name=".AboutPage" />
+        <activity android:name=".MenuPage" />
+        <activity android:name=".PastOrder" />
+        <activity android:name=".OrderPage" />
+        <activity android:name=".verify" />
         <activity android:name=".Settings" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Register" />
