--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MRGSTuckshopApp">
+        android:theme="@style/Theme.Design.NoActionBar">
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".home" />
         <activity android:name=".ContactPage" />
