--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MRGSTuckshopApp">
+        <activity android:name=".Admin"></activity>
         <activity android:name=".ContactPage" />
         <activity android:name=".Help" />
         <activity android:name=".OrderPage" />
